--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "nodemon": "1.3.7",
     "request": "2.55.0",
     "require-dir": "0.3.0",
-    "serve-favicon": "~2.1.3"
+    "serve-favicon": "~2.1.3",
+    "cron": "^1.0.4"
   },
   "devDependencies": {
     "mocha": "^2.2.5"
