--- a/package.json
+++ b/package.json
@@ -11,23 +11,24 @@
     "url": "git://github.com/srmds/Flow-Scraper.git"
   },
   "dependencies": {
-    "cheerio": "latest",
     "body-parser": "~1.8.1",
+    "cheerio": "latest",
     "config": "1.13.0",
     "cookie-parser": "~1.3.3",
+    "cron": "^1.0.4",
     "debug": "~2.0.0",
     "dotenv": "^1.1.0",
     "express": "~4.9.0",
     "googleapis": "^2.0.4",
     "jade": "~1.6.0",
+    "moment": "^2.10.3",
     "mongodb": "~2.0",
     "mongoose": "~4.0.3",
     "morgan": "~1.3.0",
     "nodemon": "1.3.7",
     "request": "2.55.0",
     "require-dir": "0.3.0",
-    "serve-favicon": "~2.1.3",
-    "cron": "^1.0.4"
+    "serve-favicon": "~2.1.3"
   },
   "devDependencies": {
     "mocha": "^2.2.5"
