--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "cheerio": "latest",
     "config": "1.13.0",
     "cookie-parser": "~1.3.3",
-    "cron": "^1.0.4",
+    "cron": "^1.0.9",
     "debug": "~2.0.0",
     "dotenv": "^1.1.0",
     "express": "~4.9.0",
     "googleapis": "^2.0.4",
     "jade": "~1.6.0",
+    "mkdirp": "^0.5.1",
     "moment": "^2.10.3",
     "mongodb": "~2.0",
     "mongoose": "~4.0.3",
