--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "body-parser": "~1.8.1",
     "cheerio": "latest",
+    "compression": "^1.4.4",
     "config": "1.13.0",
     "cookie-parser": "~1.3.3",
     "cron": "^1.0.9",
@@ -27,6 +28,7 @@
     "mongoose": "~4.0.3",
     "morgan": "~1.3.0",
     "nodemon": "1.3.7",
+    "random-useragent": "~0.1.1",
     "request": "2.55.0",
     "require-dir": "0.3.0",
     "serve-favicon": "~2.1.3"
