--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^1.1.0",
     "express": "~4.9.0",
     "googleapis": "^2.0.4",
+    "heroku-self-ping": "^1.1.1",
     "jade": "~1.6.0",
     "mkdirp": "^0.5.1",
     "moment": "^2.10.3",
